--- a/styles/style.css
+++ b/styles/style.css
@@ -62,3 +62,61 @@ nav{
     border-radius: 5px;
 
 }
+
+
+.banner-container{
+    
+    margin: 50px auto 0;
+    max-width: 1400px;
+    min-height: 50px;
+    display: flex;
+}
+
+.banner-text{
+    
+    width: 50%;
+}
+
+.banner-img{
+   
+    width: 50%;
+}
+
+.banner-img img{
+    width: 100%;
+    height: 100%;
+}
+.banner-text h1{
+    background-image: linear-gradient(to bottom,#F948B2,#8758F1);
+    color: transparent;
+    -webkit-background-clip: text;
+    font-size: 48px;
+    font-weight: 700;
+    text-align: right;
+}
+.paragraph{
+    text-align: right;
+    margin-left: 40px;
+    
+}
+.banner-button{
+    justify-content: right;
+}
+.fa-youtube{
+    color: red;
+    margin-right: 10px;
+}
+.fa-tiktok{
+    color: black;
+}
+
+.banner-button{
+    background-color:#FF42A5;
+    padding: 10px 20px;
+    border: 2px solid #FF42A5;
+    border-radius: 10px;
+}
+.banner-text{
+    text-align: right;
+}
+
