--- a/styles/style.css
+++ b/styles/style.css
@@ -120,3 +120,122 @@ nav{
     text-align: right;
 }
 
+.video-container{
+    margin: 50px auto 0;
+    max-width: 1400px;
+    min-height: 50px;
+    
+    padding: 20px;
+    text-align: center;
+}
+
+.video-container h2{
+    font-size: 24px;
+    margin-bottom: 10px;
+    font-weight: 500;
+}
+
+.h2-pink{
+    background-image: linear-gradient(to bottom,#F948B2,#8758F1);
+    color: transparent;
+    -webkit-background-clip: text;
+    font-weight:800;
+}
+
+.video-container p{
+    font-size: 18px;
+    margin-bottom: 30px;
+    color: #534C64;
+    font-weight: 400;
+}
+
+
+.image-gallery {
+      display: flex;
+      margin-right: 30px;
+      gap: 20px;
+      padding: 10px;
+      justify-content: center;
+    }
+
+    .image-wrapper {
+      position: relative;
+      overflow: hidden;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+
+    .image {
+      width: 100%;
+      height: 150px; /* Adjust the height as needed */
+      object-fit: cover;
+      border-radius: 8px;
+    }
+
+    .play-button {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      opacity: 0;
+      transition: opacity 0.2s;
+    }
+
+    .image-wrapper:hover .play-button {
+      opacity: 1;
+    }
+
+.play-icon {
+      width: 50px;
+      height: 50px;
+      fill: #fff;
+    }
+
+    .play-games {
+        margin: 50px auto 0;
+        max-width: 1400px;
+        min-height: 50px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center; 
+        align-items: center; 
+    }
+    
+    .play-games-text {
+        width: 50%;
+        text-align: center;
+        padding: 20px;
+        box-sizing: border-box;
+    }
+    
+    .play-games-img {
+        width: 50%;
+        position: relative;
+    }
+    
+    .back-img {
+        width: 100%;
+        height: 100%;
+    }
+    
+    .play-games-text h1 {
+        background-image: linear-gradient(to bottom, #F948B2, #8758F1);
+        color: transparent;
+        -webkit-background-clip: text;
+        font-size: 48px;
+        font-weight: 700;
+        margin-bottom: 10px;
+    }
+    
+    .play-games-text p {
+        margin: 0;
+    }
+    
+    .over-img {
+        position: absolute;
+        bottom: -60px;
+        right: -60px;
+        width: 250px;
+    }
+
+    
