--- a/styles/style.css
+++ b/styles/style.css
@@ -1,241 +1,320 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&family=Work+Sans&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700;800&family=Work+Sans&display=swap");
 
-*{
-    box-sizing: border-box ;
-}
-
-body{
-    font-family: 'Work Sans', sans-serif;
+* {
+  box-sizing: border-box;
 }
 
-nav{
-    background-attachment: #FFF;
-}
-.nav-container{
-    
-    min-width: 50px;
-    display: flex;
-    max-width: 1400px;
-    margin: 0 auto ;
-    
+body {
+  font-family: "Work Sans", sans-serif;
 }
 
-.logo-container{
-   
-    display: flex;
-    
-    width: 50%;
+nav {
+  background-attachment: #fff;
+}
+.nav-container {
+  min-width: 50px;
+  display: flex;
+  max-width: 1400px;
+  margin: 0 auto;
 }
 
-.logo-container img{
-    
-    width: 80px;
-    margin-right: 20px;
-    /* height: 50px; */
-}
-.logo-container p{
-    font-size: 30px;
-    
+.logo-container {
+  display: flex;
+
+  width: 50%;
 }
 
-.g-section{
-    color: #FF42A5;
+.logo-container img {
+  width: 80px;
+  margin-right: 20px;
+  /* height: 50px; */
 }
-.nav-items-container{
-    
-    width: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between ;
-
+.logo-container p {
+  font-size: 30px;
 }
 
-.nav-items-container a{
-    text-decoration: none;
-    font-size: 20px;
+.g-section {
+  color: #ff42a5;
+}
+.nav-items-container {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.login-btn{
-    background-color: rgba(11, 2, 35, 0.10);
-    padding: 10px 20px;
-    font-weight: 800;
-    border-radius: 5px;
-
+.nav-items-container a {
+  text-decoration: none;
+  font-size: 20px;
 }
 
-
-.banner-container{
-    
-    margin: 50px auto 0;
-    max-width: 1400px;
-    min-height: 50px;
-    display: flex;
+.login-btn {
+  background-color: rgba(11, 2, 35, 0.1);
+  padding: 10px 20px;
+  font-weight: 800;
+  border-radius: 5px;
 }
 
-.banner-text{
-    
-    width: 50%;
+.banner-container {
+  margin: 50px auto 0;
+  max-width: 1400px;
+  min-height: 50px;
+  display: flex;
 }
 
-.banner-img{
-   
-    width: 50%;
+.banner-text {
+  width: 50%;
 }
 
-.banner-img img{
-    width: 100%;
-    height: 100%;
-}
-.banner-text h1{
-    background-image: linear-gradient(to bottom,#F948B2,#8758F1);
-    color: transparent;
-    -webkit-background-clip: text;
-    font-size: 48px;
-    font-weight: 700;
-    text-align: right;
-}
-.paragraph{
-    text-align: right;
-    margin-left: 40px;
-    
-}
-.banner-button{
-    justify-content: right;
-}
-.fa-youtube{
-    color: red;
-    margin-right: 10px;
-}
-.fa-tiktok{
-    color: black;
+.banner-img {
+  width: 50%;
 }
 
-.banner-button{
-    background-color:#FF42A5;
-    padding: 10px 20px;
-    border: 2px solid #FF42A5;
-    border-radius: 10px;
+.banner-img img {
+  width: 100%;
+  height: 100%;
 }
-.banner-text{
-    text-align: right;
+.banner-text h1 {
+  background-image: linear-gradient(to bottom, #f948b2, #8758f1);
+  color: transparent;
+  -webkit-background-clip: text;
+  font-size: 48px;
+  font-weight: 700;
+  text-align: right;
 }
-
-.video-container{
-    margin: 50px auto 0;
-    max-width: 1400px;
-    min-height: 50px;
-    
-    padding: 20px;
-    text-align: center;
+.paragraph {
+  text-align: right;
+  margin-left: 40px;
 }
-
-.video-container h2{
-    font-size: 24px;
-    margin-bottom: 10px;
-    font-weight: 500;
+.banner-button {
+  justify-content: right;
 }
-
-.h2-pink{
-    background-image: linear-gradient(to bottom,#F948B2,#8758F1);
-    color: transparent;
-    -webkit-background-clip: text;
-    font-weight:800;
+.fa-youtube {
+  color: red;
+  margin-right: 10px;
+}
+.fa-tiktok {
+  color: black;
 }
 
-.video-container p{
-    font-size: 18px;
-    margin-bottom: 30px;
-    color: #534C64;
-    font-weight: 400;
+.banner-button {
+  background-color: #ff42a5;
+  padding: 10px 20px;
+  border: 2px solid #ff42a5;
+  border-radius: 10px;
+}
+.banner-text {
+  text-align: right;
 }
 
+.video-container {
+  margin: 50px auto 0;
+  max-width: 1400px;
+  min-height: 50px;
+
+  padding: 20px;
+  text-align: center;
+}
+
+.video-container h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+  font-weight: 500;
+}
+
+.h2-pink {
+  background-image: linear-gradient(to bottom, #f948b2, #8758f1);
+  color: transparent;
+  -webkit-background-clip: text;
+  font-weight: 800;
+}
+
+.video-container p {
+  font-size: 18px;
+  margin-bottom: 30px;
+  color: #534c64;
+  font-weight: 400;
+}
 
 .image-gallery {
-      display: flex;
-      margin-right: 30px;
-      gap: 20px;
-      padding: 10px;
-      justify-content: center;
-    }
+  display: flex;
+  margin-right: 30px;
+  gap: 20px;
+  padding: 10px;
+  justify-content: center;
+}
 
-    .image-wrapper {
-      position: relative;
-      overflow: hidden;
-      border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
+.image-wrapper {
+  position: relative;
+  overflow: hidden;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
 
-    .image {
-      width: 100%;
-      height: 150px; /* Adjust the height as needed */
-      object-fit: cover;
-      border-radius: 8px;
-    }
+.image {
+  width: 100%;
+  height: 150px; /* Adjust the height as needed */
+  object-fit: cover;
+  border-radius: 8px;
+}
 
-    .play-button {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      opacity: 0;
-      transition: opacity 0.2s;
-    }
+.play-button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity 0.2s;
+}
 
-    .image-wrapper:hover .play-button {
-      opacity: 1;
-    }
+.image-wrapper:hover .play-button {
+  opacity: 1;
+}
 
 .play-icon {
-      width: 50px;
-      height: 50px;
-      fill: #fff;
-    }
+  width: 50px;
+  height: 50px;
+  fill: #fff;
+}
 
-    .play-games {
-        margin: 50px auto 0;
-        max-width: 1400px;
-        min-height: 50px;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center; 
-        align-items: center; 
-    }
-    
-    .play-games-text {
-        width: 50%;
-        text-align: center;
-        padding: 20px;
-        box-sizing: border-box;
-    }
-    
-    .play-games-img {
-        width: 50%;
-        position: relative;
-    }
-    
-    .back-img {
-        width: 100%;
-        height: 100%;
-    }
-    
-    .play-games-text h1 {
-        background-image: linear-gradient(to bottom, #F948B2, #8758F1);
-        color: transparent;
-        -webkit-background-clip: text;
-        font-size: 48px;
-        font-weight: 700;
-        margin-bottom: 10px;
-    }
-    
-    .play-games-text p {
-        margin: 0;
-    }
-    
-    .over-img {
-        position: absolute;
-        bottom: -60px;
-        right: -60px;
-        width: 250px;
-    }
+.play-games {
+  margin: 50px auto 0;
+  max-width: 1400px;
+  min-height: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
 
+.play-games-text {
+  width: 50%;
+  text-align: center;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.play-games-img {
+  width: 50%;
+  position: relative;
+}
+
+.back-img {
+  width: 100%;
+  height: 100%;
+}
+
+.play-games-text h1 {
+  background-image: linear-gradient(to bottom, #f948b2, #8758f1);
+  color: transparent;
+  -webkit-background-clip: text;
+  font-size: 48px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+.play-games-text p {
+  margin: 0;
+}
+
+.over-img {
+  position: absolute;
+  bottom: -60px;
+  right: -60px;
+  width: 250px;
+}
+
+.button-container {
+  text-align: center;
+  margin: auto;
+  
+}
+.hover-button {
+  margin: 100px auto 0;
+  max-width: 1400px;
+  min-height: 50px;
+  
+}
+
+
+.round-button{
     
+    
+    background-color: white;
+    border-radius: 7px;
+}
+
+
+.round-button:hover{
+    border-color: #ff42a5;
+    color: #ff42a5;
+}
+.round-button-text{
+    text-align: center;
+}
+.round-button img{
+    vertical-align: middle;
+}
+
+.line {
+  padding: 10px;
+}
+
+
+.footer{
+    margin: 50px auto 0;
+    max-width: 1400px;
+    min-height: 50px;
+    background: #0B0223;
+    border: 1px solid red;
+    
+}
+
+.footer-container{
+    justify-content: center;
+}
+
+.footer-logo{
+    display: flex;
+    color: white;
+    font-size: 20px;
+    font-weight: 500;
+    gap: 15px;
+    justify-content: center;
+    margin-top: 30px;
+}
+.footer-about{
+    display: flex;
+    color: white;
+    font-weight: 500;
+    justify-content: center;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    gap: 30px;
+}
+
+.footer-icon{
+    display: flex;
+    color: white;
+    justify-content: center;
+    gap: 40px;
+    font-size: 40px;
+    margin-bottom: 20px;
+}
+
+.footer-policy{
+    display: flex;
+    color: white;
+    justify-content: center;
+    font-weight: 10;
+    gap: 60px;
+}
+
+.footer-copyright{
+    display: flex;
+    color: white;
+    justify-content: center;
+    font-weight: 10;
+    
+}
+
